welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:61: error: ')' expected but ';' found.
setCouleurBrosse(Color.pbaisseBrosse();
                                      ^